# crane-monorepo

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  redis_store.py  render.yaml
.github/workflows/: ci.yml  unload-market-quotes.yml  unload-options-chain.yml
crane-engine/: Dockerfile  pyproject.toml
crane-engine/crane_engine/: __init__.py  main.py
crane-engine/crane_engine/allocation/: gate_pipeline.py
crane-engine/crane_engine/execution/: intent_publisher.py
crane-engine/crane_engine/signals/: price_threshold.py
crane-engine/tests/: test_gates.py  test_signals.py
crane-feed/: Dockerfile  pyproject.toml
crane-feed/crane_feed/: __init__.py  classifier.py  main.py  notifier.py  seed.py
crane-feed/crane_feed/sources/: alpaca_options.py  alpaca_quotes.py  bestbuy_monitor.py  countdown_ebay.py  slickdeals_rss.py
crane-feed/crane_feed/store/: redis_writer.py
crane-feed/crane_feed/stream/: websocket_client.py
crane-feed/tests/: test_sold_detection.py  test_writer.py
crane-manager/: Dockerfile  pyproject.toml
crane-manager/crane_manager/: __init__.py  deps.py  main.py
crane-manager/crane_manager/api/: bestbuy.py  budget.py  health.py  listings.py  market.py  orders.py  strategies.py  targets.py  terms.py
crane-manager/crane_manager/monitor/: circuit_breaker.py
crane-manager/tests/: test_api.py
crane-render/: Dockerfile  pyproject.toml
crane-render/crane_render/: cli.py  config.py  main.py
crane-render/crane_render/compaction/: compactor.py
crane-render/crane_render/reader/: cursor_store.py  stream_reader.py
crane-render/crane_render/writer/: parquet_writer.py  schema.py
crane-render/tests/: test_compactor.py  test_cursor_store.py  test_parquet_writer.py  test_schema.py
crane-shared/: pyproject.toml
crane-shared/crane_shared/: __init__.py  classifier.py  events.py  models.py  redis_client.py
crane-shared/tests/: test_models.py
crane-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crane-ui/src/: App.tsx  index.css  index.tsx
crane-ui/src/components/: OptionsTable.tsx  OrdersList.tsx  PriceCard.tsx  PriceChart.tsx  TargetsList.tsx
crane-ui/src/pages/: EventsPage.tsx  ListingsPage.tsx  PricesPage.tsx  TargetsPage.tsx  TermsPage.tsx
crane-ui/src/services/: api.ts  types.ts
crane-ui/src/utils/: formatters.ts
market-data-service/: Dockerfile  build.gradle.kts
market-data-service/src/main/scala/com/helsinki/marketdata/: Main.scala
market-data-service/src/main/scala/com/helsinki/marketdata/alpaca/: AlpacaClient.scala  QuoteModels.scala
market-data-service/src/main/scala/com/helsinki/marketdata/config/: AppConfig.scala
market-data-service/src/main/scala/com/helsinki/marketdata/options/: OptionsAccessor.scala  OptionsClient.scala  OptionsContract.scala  OptionsModels.scala  OptionsPoller.scala  OptionsRedisWriter.scala
market-data-service/src/main/scala/com/helsinki/marketdata/poller/: QuotePoller.scala
market-data-service/src/main/scala/com/helsinki/marketdata/redis/: RedisWriter.scala
market-data-service/src/main/scala/com/helsinki/marketdata/stream/: OptionsStreamClient.scala  OptionsStreamModels.scala  OptionsStreamPoller.scala  OptionsStreamRedisWriter.scala
proto/: options_contract.proto
scripts/: options_accessor.py  unload_market_quotes.py  unload_options_chain.py
tests/: test_integration.py
