[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crane-feed"
version = "0.1.0"
description = "Market data ingestion service — Alpaca REST/WebSocket → Redis → event bus"
requires-python = ">=3.11"
dependencies = [
    "crane-shared",
    "httpx>=0.27",
    "websockets>=12.0",
    "msgpack>=1.0",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
crane-feed = "crane_feed.main:main"
