[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crane-feed"
version = "0.1.0"
description = "eBay listing ingestion service — Countdown API → Redis → event bus"
requires-python = ">=3.11"
dependencies = [
    "crane-shared",
    "httpx>=0.27",
    "redis>=5.0",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
crane-feed = "crane_feed.main:main"
